# CMake-MetalShaderSupport

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  shader.metal
cmake/: CMakeDetermineMetalCompiler.cmake  CMakeMetalCompiler.cmake.in  CMakeMetalInformation.cmake  CMakeTestMetalCompiler.cmake  CheckLanguage.cmake  MetalShaderSupport.cmake
example/: CMakeLists.txt  README.md
example/ExampleApp/: AAPLAppDelegate.h  AAPLAppDelegate.m  AAPLRenderer.h  AAPLRenderer.m  AAPLViewController.h  CMakeLists.txt  Info.plist  Main.storyboard  main.m
example/ShaderBase/: AAPLShaderTypes.h  AAPLShaders.metal  CMakeLists.txt
example/ShaderFull/: AAPLUserCompiledFunction.metal  CMakeLists.txt
